<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textTitle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment">

    <Button
        android:id="@+id/filterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/transparent"
        android:drawableRight="@drawable/ic_down"
        android:text="@string/filtersTitle"
        android:textColor="@color/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filterLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded"
        android:elevation="16dp"
        android:paddingBottom="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterBtn">

        <TextView
            android:id="@+id/textType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/typeFilter"
            android:textColor="@color/background"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textFirstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/first_name"
            android:fontFamily="@font/nunito"
            android:textColor="@color/background"
            app:layout_constraintBottom_toBottomOf="@+id/filterAuthorFirstnameText"
            app:layout_constraintStart_toStartOf="@+id/textAuthor"
            app:layout_constraintTop_toTopOf="@+id/filterAuthorFirstnameText" />

        <TextView
            android:id="@+id/textLastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/last_name"
            android:fontFamily="@font/nunito"
            android:textColor="@color/background"
            app:layout_constraintBottom_toBottomOf="@+id/filterAuthorLastnameText"
            app:layout_constraintStart_toStartOf="@+id/textAuthor"
            app:layout_constraintTop_toTopOf="@+id/filterAuthorLastnameText" />

        <TextView
            android:id="@+id/textAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/authorFilter"
            android:textColor="@color/background"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <EditText
            android:id="@+id/filterAuthorFirstnameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:ems="15"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textLastname"
            app:layout_constraintTop_toBottomOf="@+id/textAuthor" />

        <EditText
            android:id="@+id/filterAuthorLastnameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:ems="15"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textLastname"
            app:layout_constraintTop_toBottomOf="@+id/filterAuthorFirstnameText" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/nameFilter"
            android:textColor="@color/background"
            app:layout_constraintStart_toStartOf="@+id/textAuthor"
            app:layout_constraintTop_toBottomOf="@+id/filterAuthorLastnameText" />

        <EditText
            android:id="@+id/filterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:ems="15"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/filterAuthorLastnameText"
            app:layout_constraintStart_toStartOf="@+id/filterAuthorLastnameText"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:backgroundTint="@color/background"
            android:textColor="@color/white"
            android:fontFamily = "@font/nunito_bold"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/filterText" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textType">

            <RadioButton
                android:id="@+id/allRB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/background"
                android:checked="true"
                android:fontFamily="@font/nunito"
                android:text="@string/all"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/caffeRB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/background"
                android:fontFamily="@font/nunito"
                android:text="@string/cafe"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/restRB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/background"
                android:fontFamily="@font/nunito"
                android:text="@string/restaurant"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/hotelRB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/background"
                android:fontFamily="@font/nunito"
                android:text="@string/hotel"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/otherRB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/background"
                android:fontFamily="@font/nunito"
                android:text="@string/other"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/homeScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterLayout">

        <LinearLayout
            android:id="@+id/linearPosts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>